Fix scrollbar bug

--- a/src/main/resources/view/blockcontent/BlockContentDisplay.css
+++ b/src/main/resources/view/blockcontent/BlockContentDisplay.css
@@ -1,7 +1,8 @@
 body {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     font-weight: 500;
-    margin: 0;
+    margin-left: 0;
+    margin-right: 25px;
 }
 
 h1,
